# nu_plugin_tui_template

./: Cargo.toml  README.md
src/: event.rs  lib.rs  main.rs
