[package]
name = "nu_plugin_tui_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
nu-plugin = "0.95.0"
nu-protocol =  "0.95.0"
ratatui = "0.26.1"

# NOTE: see https://github.com/amtoine/nu_plugin_explore/pull/38
[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }

[lib]
bench = false
